<resources>
    <string name="app_name">Band-it</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Scan</string>
    <string name="title_notifications">List</string>

    <string name="number_field">Tag ID</string>
    <string name="tag_field">Tag Color</string>
    <string name="species_field">Species</string>
    <string name="sex_field">Sex</string>
    <string name="date_field">Date of Observation</string>
    <string name="latitude_field">Latitude</string>
    <string name="longitude_field">Longitude</string>

    <string name="description_form">New tag submission</string>
    <string name="submit_button">Submit</string>

    <string name="default_pic_text">Searching...</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Upload Scan</string>
    <string name="list_header">Tag Distribution</string>

    <string-array name="colors_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Gray</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="sex_text">Sex:</string>
    <string name="color_text">Tag color:</string>
</resources>
