<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tagIDRow"
        android:layout_width="40dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/number_field"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tagColorRow"
        android:layout_width="50dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/tag_field"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/speciesRow"
        android:layout_width="90dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/species_field"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/sexRow"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/sex_field"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/observationDateRow"
        android:layout_width="60dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/date_field"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/latitudeRow"
        android:layout_width="45dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/latitude_field"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/longitudeRow"
        android:layout_width="55dp"
        android:layout_height="15dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/longitude_field"
        android:textSize="12sp"
        android:textStyle="bold"/>
</TableRow>